k8s/nest-habit-with-tg-bot.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nest-habit-with-tg-bot
  name: nest-habit-with-tg-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-habit-with-tg-bot
  template:
    metadata:
      labels:
        app: nest-habit-with-tg-bot
        backend: 'true'
    spec:
      containers:
      - name: nest-habit-with-tg-bot
        image: noobj/nest-habit_node
        imagePullPolicy: Always
