k8s/nest-habit.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nest-habit
  name: nest-habit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-habit
  template:
    metadata:
      labels:
        app: nest-habit
    spec:
      containers:
      - name: nest-habit
        image: noobj/nest-habit_node
        imagePullPolicy: Always
      - name: nest-habit-with
        image: noobj/nest-habit_node
        imagePullPolicy: Always
