k8s/nest-habit.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nest-habit-svc
  name: nest-habit-svc
spec:
  ports:
  - port: 3200
    protocol: TCP
    targetPort: 3000
  selector:
    backend: 'true'
  type: ClusterIP
