k8s/nest-habit.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.org/websocket-services: "nest-habit"
spec:
  rules:
  - host: nest-habit.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nest-habit
            port:
              number: 3200
